# fractal-tasks-demo

./: .copier-answers.yml  README.md  pyproject.toml
src/fractal_tasks_demo/: __FRACTAL_MANIFEST__.json  __init__.py  thresholding_label_task.py
src/fractal_tasks_demo/dev/: create_manifest.py
tests/: __init__.py  test_thresholding_task.py  test_valid_args_schemas.py
